Fixing full bleed images on phone 6 and 6+.

--- a/clients/ios/static/storyDetailView.css
+++ b/clients/ios/static/storyDetailView.css
@@ -487,25 +487,43 @@ div + p {
     height: auto !important;
 }
 
+.NB-width-375 .NB-story img.NB-large-image {
+    max-width: 375px;
+    margin-left: -12px !important;
+    width: 375px !important;
+}
+.NB-width-414 .NB-story img.NB-large-image {
+    max-width: 414px;
+    margin-left: -12px !important;
+    width: 414px !important;
+}
+
 .NB-ipad-narrow .NB-story img.NB-large-image {
     max-width: 500px;
     margin-left: -30px !important;
     width: 500px !important;
-    height: auto !important;
 }
 
 .NB-ipad-wide .NB-story img.NB-large-image {
     max-width: 656px;
     margin-left: -90px !important;
     width: 656px !important;
-    height: auto !important;
 }
 
 .NB-iphone-wide .NB-story img.NB-large-image {
     max-width: 668px;
-    margin-left: -36px !important;
+    margin-left: -30px !important;
     width: 668px !important;
-    height: auto !important;
+}
+.NB-width-667 .NB-story img.NB-large-image {
+    max-width: 667px;
+    margin-left: -30px !important;
+    width: 667px !important;
+}
+.NB-width-736 .NB-story img.NB-large-image {
+    max-width: 736px;
+    margin-left: -30px !important;
+    width: 736px !important;
 }
 
 .NB-story img.NB-small-image {
